# KiBot

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report-en.yml  bug-report.yml  config.yml  feature-request-en.yml  feature-request.yml  question-en.yml  question.yml
adapter/napcat/: http_api.py  webhook_server.py  ws_client.py
core/: bot_core.py  handler.py  router.py
core/pusher/: bilibili_scheduler.py  live_scheduler.py  pusher.py
docs/: bilibili_service_design.md
infra/: logger.py
infra/config/: settings.py
service/bilibili/: client.py  exceptions.py  models.py  parser.py  search_service.py  service.py
service/bilibili/api/: __init__.py  dynamic.py  live.py  login.py  search.py  season.py  user.py  video.py
service/bilibili/models/: __init__.py  auth.py  common.py  dynamic.py  live.py  user.py  video.py
service/bilibili/renderer/: __init__.py  base.py  dynamic_renderer.py  video_renderer.py
service/bilibili/subscription/: __init__.py  filter.py  manager.py  scheduler.py  storage.py  task.py
service/bilibili/template/: __init__.py  engine.py  templates.py
service/bilibili/utils/: cache.py  cookie_refresher.py  rate_limiter.py  retry.py  wbi_sign.py
service/llm/: tools.py
service/search/: client.py
service/weather/: client.py  service.py  typhoon_renderer.py
