[project]
name = "kibot"
version = "2.0.0"
description = "KiBot - QQ Bot with Webhook Architecture"
requires-python = ">=3.11"
dependencies = [
    "APScheduler>=3.11.0",
    "cartopy>=0.25.0",
    "chinese-calendar>=1.10.0",
    "dashscope>=1.24.1",
    "faiss-cpu>=1.7.3",
    "fastapi>=0.115.0",
    "httpx>=0.28.1",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.72",
    "langchain-openai>=0.3.28",
    "langchain-text-splitters>=0.3.9",
    "matplotlib>=3.10.7",
    "metpy>=1.7.1",
    "numpy>=2.3.0",
    "pillow>=11.3.0",
    "playwright>=1.54.0",
    "pycryptodome>=3.23.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "qrcode>=8.2",
    "typing-extensions>=4.14.1",
    "uvicorn>=0.32.0",
    "websockets>=15.0.1",
    "zhdate>=0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["adapter", "core", "infra"]
